--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -1,82 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
-
-//Shadow
-$shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-
-//typography
-$font-primary: "Montserrat", sans-serif;
-$font-secondary: "Bebas Neue", sans-serif;
-// $font-tertiary: "Sacramento", cursive;
-
-//font size
-$type-size-base: 16px;
-
-//spacings and sizes
-    //layout
-    $gutter: 24px;
-    $page-margin: 50px;
-
-    //Vertical and horizontal spacings
-    $null: 0;
-    $xxxs: 2px;
-    $xxs: 4px;
-    $xs: 8px;
-    $s: 16px;
-    $r: 24px;
-    $m: 36px;
-    $l: 48px;
-    $xl: 60px;
-    $xxl: 96px;
-    $xxxl: 144px;
-
-//colors
-    //theme colors
-    // $color-primary-light: #B19ABD;
-    $color-primary: #333333;
-    // $color-primary-dark: #5C227A;
-
-    // $color-secondary-light: #E898B7;
-    // $color-secondary: #DA588A;
-    // $color-secondary-dark: #A3577B;
-
-    // $color-accent-light: #F9D8D1;
-    // $color-accent: #F6C0B4;
-    // $color-accent-dark: #B98579;
-
-    $color-error-light: #F2C5C4;
-    $color-error: #C60000;
-
-    $color-outline-light: #cccccc;
-    $color-outline: #666666;
-    $color-outline-dark: #333333;
-
-    //background and surface colors
-    $color-surface-light: #ffffff;
-    $color-surface: #f8f8f8;
-    $color-surface-dark: #333333;
-
-    $color-background: #ffffff;
-
-    //typography colors
-    $color-font-primary: #333333;
-    $color-font-primary-variant: #ffffff;
-    $color-font-secondary: #666666;
-    $color-font-action: #333333;
-    // $color-font-accent: #875A9E;
-
-    
-
-//component styling
-$rounded-corner: 8px;
-
-//border
-$border-weight: 2px;
-$border-style: solid;
-$border: $border-weight $border-style $color-outline;
-
-//widths
-$width-container-content: 800px;
-$width-container: 100%;
-
-//heights
-$height-header: $xxl;
+h1 {
+    font-family: $font-secondary;
+}
