--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,17 @@ header {
   left: 0;
   z-index: 1000;
 }
+header .container {
+  display: flex;
+  justify-content: space-between;
+}
+header .container nav {
+  display: flex;
+  -moz-column-gap: 24px;
+       column-gap: 24px;
+  justify-content: flex-end;
+  text-align: right;
+}
 
 footer {
   padding: 8px 0;
