update header positions

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -8,11 +8,12 @@ header {
     .container {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         nav {
             display: flex;
             column-gap: $gutter;
             justify-content: flex-end;
-            text-align: right;
+            text-align: center;
         }
     }
 }
