--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,10 @@ h1 {
   font-family: "Bebas Neue", sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
 header {
   padding: 24px 0;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -34,13 +38,14 @@ header {
 header .container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 header .container nav {
   display: flex;
   -moz-column-gap: 24px;
        column-gap: 24px;
   justify-content: flex-end;
-  text-align: right;
+  text-align: center;
 }
 
 footer {
